--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,8 @@
+:root {
+  --bg-color: #282c34;
+  --white: #fff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--bg-color);
+  color: var(--white);
+  height: 100vh;
 }
 
 code {
